<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="email_support">Email Support</string>
    <string name="support">Support</string>
    <string name="database_updates">Database Updates - 6/73</string>
    <string name="database_version">Database Version - 2.0</string>
    <string name="app_version">App Version - 1.1</string>
    <string name="about_sba_communications">About SBA Communications</string>
    <string name="about">About</string>
    <string name="coordinates">Search by Coordinates</string>
    <string name="address">Search by Address</string>
    <string name="site_name_id">Search by Site Name/ID</string>
    <string name="done">Done</string>
    <string name="back">Back</string>
    <string name="central_america">Central America</string>
    <string name="managed">Managed</string>
    <string name="owned">Owned</string>
    <string name="new_construction">New Construction</string>
    <string name="canada">Canada</string>
    <string name="list_view">List View</string>
    <string name="layers">Layers</string>
    <string name="instructions">Instructions</string>
    <string name="instructions2">Search Instructions</string>
    <string name="current_location">Current Location</string>
    <string name="enter_site">Enter Site</string>
    <string name="current">Current</string>
    <string name="information1">Search Instructions</string>
    <string name="app_name">SBA Sites</string>
    <string name="site_name_examples">Site Name Examples</string>
    <string name="ex_shadow">Ex: \"Shadow\"</string>
    <string name="partial_site_name_search">Partial Site Name Search</string>
    <string name="ex_hackberry">Ex: \"Hackberry\"</string>
    <string name="full_site_name_search">Full Site Name Search\n</string>
    <string name="site_id_examples">Site ID Examples</string>
    <string name="ex_fl">Ex: \"FL\"</string>
    <string name="site_id_partial_search">Site ID Partial Search</string>
    <string name="ex_fl98463_l">Ex: \"FL98463-L\"</string>
    <string name="site_id_exact_search">Site ID Exact Search</string>
    <string name="site_detail_activity">Site Detail</string>
    <string name="search_by_coordinates">Search By Coordinates</string>
    <string name="coordinate_pair_example">Coordinate Pair Examples</string>
    <string name="ex_53.5_117.2">Ex: “53.5,-117.2”</string>
    <string name="lat_long_delimited_by_comma">Lat/Long delimited by comma</string>
    <string name="longitude_without_accepted">Longitude Without \'-\' Accepted</string>
    <string name="ex_53.5_117.2b">Ex: “53.5,117.2”</string>
    <string name="symbol_is_not_required_for_long">\'-\' symbol is not required for Long</string>
    <string name="site_name">Site Name</string>
    <string name="userLocationClicked">userLocationClicked</string>
    <string name="ok">Ok</string>
    <string name="address_search_with_full_address">Address Search with Full Address</string>
    <string name="ex_1430_beechwood">Ex: “1430 Beechwood Cir, Lawrenceville, GA…</string>
    <string name="address_exact_search">Address Exact Search</string>
    <string name="city_state_province">City, State/Province</string>
    <string name="ex_boca_raton">Ex: “Boca Raton, FL”</string>
    <string name="address_partial_search">Address Partial Search</string>
    <string name="ex_lawrenceville_ga">Ex: “Lawrenceville, GA”</string>
    <string name="state_province">State/Province</string>
    <string name="ex_california">Ex: “California”</string>
    <string name="zip_code">Zip Code</string>
    <string name="ex_33487">Ex: “33487”</string>
    <string name="major_city">Major City</string>
    <string name="ex_miami">Ex: “Miami”</string>
    <string name="ex_vancouver">Ex: “Vancouver”</string>
    <string name="sba_is_a_leading">SBA is a leading independent owner and operator of wireless communications infrastructure in North and Central America. SBA generates revenue from two primary businesses - site leasing and site development services. The primary focus of the Company is the leasing of antenna space on its multi-tenant towers to a variety of wireless sercice providers under long-term lease contracts.</string>
    <string name="LABEL_LAYER">Layer:</string>
    <string name="LABEL_STATUS">Status:</string>
    <string name="LABEL_COORDINATES">Coordinates:</string>
    <string name="LABEL_TYPE">Type:</string>
    <string name="LABEL_HEIGHT">Height(ft):</string>
    <string name="LABEL_AGL">Grd Elev:</string>
    <string name="LABEL_MTA">MTA:</string>
    <string name="LABEL_BTA">BTA:</string>
    <string name="LABEL_CANCEL">Cancel</string>
    <string name="search_hint">Search Sites, Addresses, Coordinates</string>
</resources>
