<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <TextView android:layout_height="wrap_content" android:layout_alignParentTop="true" android:id="@+id/textView1" android:paddingLeft="10dp" android:textSize="16sp" android:textStyle="bold" android:layout_width="fill_parent" android:text="@string/address_search_with_full_address"></TextView>
    <Button android:id="@+id/button1" android:layout_below="@+id/textView1" android:text="@string/ex_1430_beechwood" android:gravity="left" android:layout_width="fill_parent" android:layout_height="35dp" android:textSize="14sp"></Button>
    <TextView android:layout_height="wrap_content" android:layout_below="@+id/button1" android:id="@+id/textView2" android:paddingLeft="10dp" android:layout_width="fill_parent" android:text="@string/address_exact_search" android:textSize="11sp"></TextView>
    <TextView android:layout_height="wrap_content" android:layout_below="@+id/textView2" android:id="@+id/textView3" android:layout_alignLeft="@+id/textView2" android:layout_alignRight="@+id/textView2" android:textSize="16sp" android:textStyle="bold" android:layout_width="fill_parent" android:paddingLeft="10dp" android:text="@string/city_state_province"></TextView>
    <Button android:id="@+id/button2" android:layout_below="@+id/textView3" android:gravity="left" android:text="@string/ex_boca_raton" android:textSize="14sp" android:layout_height="35dp" android:layout_width="fill_parent"></Button>
    <TextView android:layout_height="wrap_content" android:layout_below="@+id/button2" android:id="@+id/textView4" android:text="@string/address_partial_search" android:layout_width="fill_parent" android:textSize="11sp" android:paddingLeft="10dp"></TextView>
    <Button android:id="@+id/button3" android:layout_below="@+id/textView4" android:layout_width="fill_parent" android:text="@string/ex_lawrenceville_ga" android:gravity="left" android:textSize="14sp" android:paddingLeft="10dp" android:layout_height="35dp"></Button>
    <TextView android:layout_height="wrap_content" android:layout_below="@+id/button3" android:id="@+id/textView5" android:layout_width="fill_parent" android:text="@string/address_partial_search" android:textSize="11sp" android:paddingLeft="10sp"></TextView>
    <TextView android:layout_height="wrap_content" android:layout_below="@+id/textView5" android:id="@+id/textView6" android:text="@string/state_province" android:textSize="16sp" android:textStyle="bold" android:paddingLeft="10dp" android:layout_width="fill_parent"></TextView>
    <Button android:id="@+id/button4" android:layout_below="@+id/textView6" android:layout_height="35dp" android:layout_width="fill_parent" android:gravity="left" android:text="@string/ex_california" android:paddingLeft="10dp" android:textSize="14sp"></Button>
    <TextView android:layout_height="wrap_content" android:layout_below="@+id/button4" android:id="@+id/textView7" android:text="@string/address_partial_search" android:textSize="11sp" android:paddingLeft="10dp" android:layout_width="fill_parent"></TextView>
    <TextView android:layout_height="wrap_content" android:layout_below="@+id/textView7" android:id="@+id/textView8" android:textSize="16sp" android:textStyle="bold" android:paddingLeft="10dp" android:layout_width="fill_parent" android:text="@string/zip_code"></TextView>
    <Button android:id="@+id/button5" android:layout_below="@+id/textView8" android:layout_height="35dp" android:textSize="14sp" android:text="@string/ex_33487" android:layout_width="fill_parent" android:paddingLeft="10dp" android:gravity="left"></Button>
    <TextView android:layout_height="wrap_content" android:layout_below="@+id/button5" android:id="@+id/textView9" android:layout_width="fill_parent" android:textSize="11sp" android:paddingLeft="10dp" android:text="@string/address_partial_search"></TextView>
    <TextView android:layout_height="wrap_content" android:layout_below="@+id/textView9" android:layout_width="wrap_content" android:id="@+id/textView10" android:textSize="16sp" android:textStyle="bold" android:text="@string/major_city" android:paddingLeft="10dp"></TextView>
    <Button android:id="@+id/button6" android:layout_below="@+id/textView10" android:layout_alignLeft="@+id/textView10" android:gravity="left" android:paddingLeft="10dp" android:text="@string/ex_miami" android:textSize="14sp" android:layout_width="fill_parent" android:layout_height="35dp"></Button>
    <TextView android:layout_height="wrap_content" android:layout_below="@+id/button6" android:id="@+id/textView11" android:textSize="11sp" android:layout_width="fill_parent" android:paddingLeft="10dp" android:text="@string/address_partial_search"></TextView>
    <Button android:id="@+id/button7" android:layout_below="@+id/textView11" android:layout_alignLeft="@+id/textView11" android:layout_alignRight="@+id/textView11" android:gravity="left" android:paddingLeft="10dp" android:text="@string/ex_vancouver" android:textSize="14sp" android:layout_height="35dp" android:layout_width="fill_parent"></Button>
    <TextView android:layout_height="wrap_content" android:layout_below="@+id/button7" android:id="@+id/textView12" android:textSize="11sp" android:layout_width="fill_parent" android:paddingLeft="10dp" android:text="@string/address_partial_search"></TextView>
</RelativeLayout>
